# hakoniwa-mujoco-robots

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README-ja.md  README.md  build-win.bash  build-win.ps1  build.bash  clean-artifacts.bash  control.bash  controll.bash  doctor.bash  forklift-1.bash  forklift-2.bash  forklift-unit.bash  rd-design.md  requirements.txt  tb3-demo-launch-win.json  tb3-demo-launch.json  tb3-demo.bash  tb3-dual-mirror-demo-launch.json  tb3-dual-mirror-demo.bash  tb3-mbody-demo-launch.json  tb3-mbody-demo.bash  tb3-obstacle-avoidance-demo-launch.json  tb3-obstacle-avoidance-demo.bash
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_setup_problem.md  example_request.md  feature_request.md
.github/workflows/: build.yml  camera-sensor-tests.yml
config/: custom-compact.json  custom.json  forklift-unit-compact.json  forklift-unit.json  go1-joint-pdudef-compact.json  go1-joint-pdutypes.json  joint-actuator-pdutypes.json  monitor_camera_config.json  pdutypes_drone_full.json  pdutypes_forklift_main.json  pdutypes_monitor_camera.json  pdutypes_pose_only.json  rover-twist-pdudef-compact.json  rover-twist-pdutypes.json  safety-forklift-pdu-compact.json  safety-forklift-pdu.json  shadow-hand-pdudef-compact.json  shadow-hand-pdutypes.json  tb3-dual-burger-real-waffle-mirror-bindings.json  tb3-dual-pdudef-compact.json  tb3-dual-waffle-real-burger-mirror-bindings.json  tb3-pdudef-compact.json  tb3-pdutypes.json
config/assets/: tb3-dual-burger-real-waffle-mirror-asset.json  tb3-dual-waffle-real-burger-mirror-asset.json  tb3-mbody-burger-asset.json  tb3-mbody-waffle-asset.json  tb3-mbody-waffle-pi-asset.json
config/endpoint/: go1_joint_endpoint.json  rover_twist_endpoint.json  shadow_hand_endpoint.json  tb3_dual_burger_endpoint.json  tb3_dual_waffle_endpoint.json  tb3_gamepad_endpoint.json  tb3_sim_endpoint.json
config/sensors/: lds-01.json  lds-02.json
docker/: Dockerfile  README.md  create-image.bash  entrypoint.sh  env.bash  image_name.txt  run.bash
docs/: README.md  forklift-context-rd-ja.md  forklift-context-rd.md  sensor-actuator-config-schema.md  sensor-actuator-design.md
docs/guide/: json-config-ja.md  json-config.md  mjcf-json-authoring-ja.md  mjcf-json-authoring.md  sensor-actuator-user-ja.md  sensor-actuator-user.md
docs/spec/: sensor-actuator-config-schema.md
docs/tutorial/: camera-sensor-hakoniwa-ja.md  camera-sensor-ja.md  joint-actuator-hakoniwa-ja.md  joint-actuator-ja.md  ultrasonic-sensor-hakoniwa-ja.md  ultrasonic-sensor-ja.md
evidence/official-resume-2026-02-23-v8/: forklift-unit-restore-debug.csv  forklift-unit-trace.csv  summary.txt
examples/: CMakeLists.txt  README.md
examples/actuators/agilex_tracer/: CMakeLists.txt  README.md  agilex-tracer-rover-example.cpp  rover-twist-hakoniwa-asset.cpp  send_rover_twist.py
examples/actuators/joint/: CMakeLists.txt  README.md  joint-actuator-example.cpp  joint-actuator-hakoniwa-asset.cpp  joint_actuator_sender.py
examples/actuators/shadow_hand/: CMakeLists.txt  README.md  send_shadow_hand_targets.py  shadow-hand-actuator-map.cpp  shadow-hand-hakoniwa-asset.cpp
examples/actuators/unitree_go1/: CMakeLists.txt  README.md  pose_bounce_go1.py  send_go1_joint_targets.py  unitree-go1-joint-hakoniwa-asset.cpp  unitree-go1-joint-io-example.cpp  walk_go1.py
examples/sensors/color_camera/: CMakeLists.txt  README.md  color-camera-example.cpp  color-camera-hakoniwa-asset.cpp  read_camera.py
examples/sensors/color_camera/support/: color_camera_example_support.cpp  color_camera_example_support.hpp
examples/sensors/ultrasonic/: CMakeLists.txt  README.md  read_range.py  ultrasonic-example.cpp  ultrasonic-hakoniwa-asset.cpp
examples/sensors/ultrasonic/support/: ultrasonic_example_support.cpp  ultrasonic_example_support.hpp
gamepad/: gamepad.py  gamepad_pdu.py  pdu_data.py
include/: actuator.hpp  hakoniwa.hpp  hakoniwa_mujoco_context.hpp  physics.hpp  primitive_types.hpp  sensor.hpp
python/: drone_ball_control.py  forklift_api_control.py  forklift_gamepad.py  forklift_simple_auto.py  lidar_visualizer.py  plot_forklift_continuity.py  rover_gamepad.py  tb3_gamepad.py  tb3_lidar_visualizer.py  tb3_obstacle_avoider.py  tb3_route_demo.py  tb3_state_visualizer.py
src/: CMakeLists.txt
src/actuator/: actuator_impl.hpp  joint_actuator_impl.hpp  joint_trajectory_actuator_impl.hpp  named_actuator_impl.hpp
src/cmake-options/: default-cmake-options.cmake
src/main_for_sample/drone_ball/: CMakeLists.txt  README-ja.md  main.cpp
src/main_for_sample/forklift/: CMakeLists.txt  forklift_pdu_runtime.cpp  forklift_pdu_runtime.hpp  forklift_recovery_logger.cpp  forklift_recovery_logger.hpp  forklift_simulation_loop.cpp  forklift_simulation_loop.hpp  forklift_trace_logger.cpp  forklift_trace_logger.hpp  forklift_unit_app.cpp  forklift_unit_app.hpp  forklift_visibility_controller.cpp  forklift_visibility_controller.hpp  main.cpp  main_unit.cpp  rd_light_integration.cpp  rd_light_integration.hpp
src/main_for_sample/rover/: CMakeLists.txt  main.cpp
src/main_for_sample/tb3/: CMakeLists.txt  main.cpp
src/mujoco-common/: mujoco_debug.cpp  mujoco_viewer.cpp  mujoco_viewer.hpp
src/physics/: physics_impl.hpp
src/robots/tb3/: tb3_hakoniwa_adapter.cpp  tb3_robot.cpp  tb3_runtime_config_loader.cpp
src/runtime/: hakoniwa_asset_lifecycle.cpp
src/sensors/: CMakeLists.txt
src/sensors/camera/: camera_config_loader.cpp  camera_encoding_utils.cpp  camera_encoding_utils.hpp  camera_pdu_converter.cpp  camera_sensor.cpp  depth_camera_sensor.cpp  image_frame_writer.cpp  mujoco_camera_renderer.cpp  rgbd_camera_sensor.cpp  stereo_camera_sensor.cpp  world_viewer_camera_renderer.cpp
src/sensors/debug/: raycast_debug.cpp
src/sensors/imu/: imu_sensor.cpp
src/sensors/joint_state/: joint_state_sensor.cpp
src/sensors/lidar/: lidar_2d_sensor.cpp
src/sensors/noise/: axis_noise.cpp  range_noise.cpp
src/sensors/odometry/: odometry_sensor.cpp
src/sensors/tf/: tf_publisher.cpp
src/sensors/ultrasonic/: ultrasonic_sensor.cpp
tools/: validate_assets.py
(+161 files in other folders)
